@@ -12,9 +12,13 @@ use Catalyst::Test 'TestApp';
 SKIP:
 {
     unless ( TestApp->isa('Catalyst::Plugin::SubRequest') ) {
-        skip "Install Catalyst::Plugin::SubRequest >= 0.08 for these tests", 2;
+        skip "Install Catalyst::Plugin::SubRequest >= 0.15 for these tests", 2;
+    }
+    unless ( $Catalyst::Plugin::SubRequest::VERSION >= 0.15 ) {
+        skip "Need Catalyst::Plugin::SubRequest >= 0.15 for these tests", 2;
     }
 
     ok( my $res = request('http://localhost/subtest'), 'Request' );
     is( $res->content, 'subtest2 ok', 'SubRequest ok' );
 }
+
